fix spacing on preview page

--- a/springboard_advocacy/modules/sba_social_action/css/message-preview.css
+++ b/springboard_advocacy/modules/sba_social_action/css/message-preview.css
@@ -20,7 +20,7 @@
 }
 .message-preview-container div.sba-message {
     margin-bottom: 2em;
-    padding-bottom: 2em;
+    padding-bottom: 1em;
     display: block;
     border-bottom: 1px solid #ccc;
     max-width: 770px;
@@ -121,10 +121,6 @@ input#edit-twitter-sign-in:hover {
 
 .uneditable-message-preview {
     padding: 10px;
-    /*border: 1px solid rgba(46, 107, 184, 0.48);*/
-    /*moz-border-radius: 4px;*/
-    /*webkit-border-radius: 4px;*/
-    /*border-radius: 4px;*/
     max-width: 770px;
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
